--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 body {
     font-family: 'Open Sans Condensed', sans-serif;
+    background-color:rgba(0, 0, 0, 0.466);
+}
+
+.betta-1 {
+    height: 200px;
+    border-radius: 15px;
+}
+
+
+.card-header {
+    padding: 25px;
+}
+
+
+.bg-dark {
+    padding-left: 20px;
+}
+
+.jumbotron {
+    padding-bottom: 0;
+}
+
+.betta-2 {
+    height: 300px;
+}
+
+#aquarium {
+    margin-top: 25px;
+}
+
+.site-footer {
+    margin-top: 50px;
+    padding-top: 50px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.aquarium-setup-1 {
+    width: 100px;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.45);
 }
