--- a/style.css
+++ b/style.css
@@ -43,3 +43,9 @@ body {
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.45);
 }
+
+a, a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
