--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans Condensed', sans-serif;
     background-color:rgba(0, 0, 0, 0.466);
+    font-size: large;
 }
 
 .betta-1 {
